sample/src/main/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-hello-demo
  labels:
    name: quarkus-hello-demo
