sample/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: quarkus-hello-demo
spec:
  type: NodePort
  selector:
    app: hello-app
    namespace: quarkus-hello-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
